--- a/src/app/select-reactive-form-example.html
+++ b/src/app/select-reactive-form-example.html
@@ -1,29 +1,26 @@
 <form [formGroup]="form">
-  <h4>mat-select</h4>
+  <h4>Model</h4>
   <mat-form-field appearance="fill">
-    <mat-label>Favorite Food</mat-label>
-    <mat-select [formControl]="foodControl" name="food">
+    <mat-label>Favorite model</mat-label>
+    <mat-select [formControl]="modelControl" name="model">
       <mat-option>None</mat-option>
-      <mat-option *ngFor="let food of foods" [value]="food.value">
-        {{food.viewValue}}
+      <mat-option *ngFor="let model of models" [value]="model.value">
+        {{model.viewValue}}
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <p>Selected: {{foodControl.value}}</p>
-  <h4>Native select</h4>
+  <h4>Brand</h4>
   <mat-form-field appearance="fill">
     <mat-label>Favorite Car</mat-label>
-    <select matNativeControl [formControl]="carControl" name="car">
-      <option value="">None</option>
-      <option *ngFor="let car of cars" [value]="car.value">
+    <mat-select [formControl]="carControl" name="car">
+      <mat-option >None</mat-option>
+      <mat-option *ngFor="let car of cars" [value]="car.value">
         {{car.viewValue}}
-      </option>
-    </select>
+      </mat-option>
+    </mat-select>
   </mat-form-field>
-  <p>Selected: {{carControl.value}}</p>
+  <h4>You Selected the car: "{{carControl.value}} {{modelControl.value}}"</h4>
 </form>
 
 
-<!-- Copyright 2020 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+
